webapp1_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp1-deployment
  labels:
    app: webapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapps
  template:
    metadata:
      labels:
        app: webapps
    spec:
      containers:
      - name: webapp1
        image: kmchethan/webapp1:v1
        ports:
        - containerPort: 80
