webapp2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp2-deployment
  labels:
    app: webapp2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapps
  template:
    metadata:
      labels:
        app: webapps
    spec:
      containers:
      - name: webapp2
        image: kmchethan/webapp2:v1
        ports:
        - containerPort: 80
