service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapps-service
  labels:
    app: webapps
spec:
  # The type is not specified, defaulting to ClusterIP
  ports:
  - port: 8081
    targetPort: 80
  selector:
    app: webapps
