ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: webapps-ingress-demo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapps-service
            port:
              number: 80
